syntax = "proto3";

package admin.freelancers.freelancer.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/admin/freelancers/freelancer/v1";

// -------------- Сервис по работе с докторов ---------------
service FreelancerAdminService {
  rpc GetFreelancers(GetFreelancersRequest) returns (GetFreelancersResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancers"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение фрилансеров"};
  }
  rpc SortFreelancers(SortFreelancersRequest) returns (SortFreelancersResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancers/sort"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Сортировка фрилансеров"};
  }
  rpc SearchFreelancers(SearchFreelancersRequest) returns (SearchFreelancersResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancers/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск фрилансера по параметрам"};
  }
  rpc GetFreelancerByID(GetFreelancerByIDRequest) returns (GetFreelancerByIDResponse) {
    option (google.api.http) = {
      get: "/api/v1/admin/freelancer/{freelancer_id}"
      // /api/v1/admin/freelancers -> /api/v1/admin/freelancer (без s) чтобы работало норм
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение карточки фрилансера"};
  }
  rpc UpdateFreelancer(UpdateFreelancerRequest) returns (UpdateFreelancerResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Обновление фрилансера"};
  }
  rpc DeleteFreelancer(DeleteFreelancerRequest) returns (DeleteFreelancerResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление фрилансера"};
  }
  rpc ActivateFreelancer(ActivateFreelancerRequest) returns (ActivateFreelancerResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/activate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Активация фрилансера"};
  }
  rpc DeactivateFreelancer(DeactivateFreelancerRequest) returns (DeactivateFreelancerResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/deactivate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Деактивация фрилансера"};
  }
  rpc SaveFreelancerPhoto(SaveFreelancerPhotoRequest) returns (SaveFreelancerPhotoResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/save_photo"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Сохранение фотографии фрилансера"};
  }
  rpc AddAdditionalCity(AddAdditionalCityRequest) returns (AddAdditionalCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/add_additional_city"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление дополнительного города"};
  }
  rpc AddAdditionalSpeciality(AddFreelancerAdditionalSpecialityRequest) returns (AddFreelancerAdditionalSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/add_additional_speciality"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление доп специальности"};
  }
  rpc DeleteAdditionalCity(DeleteFreelancerAdditionalCityRequest) returns (DeleteFreelancerAdditionalCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/delete_additional_city"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление доп города"};
  }
  rpc DeleteAdditionalSpeciality(DeleteFreelancerAdditionalSpecialityRequest) returns (DeleteFreelancerAdditionalSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/delete_additional_speciality"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление доп специальности"};
  }
  rpc AddRecommendation(AddRecommendationRequest) returns (AddRecommendationResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/add_recommendation"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление рекомендации"};
  }
  rpc DeleteRecommendation(DeleteRecommendationRequest) returns (DeleteRecommendationResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/delete_recommendation"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление рекомендации"};
  }
  rpc ChangeRecommendationSort(ChangeRecommendationSortRequest) returns (ChangeRecommendationSortResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/change_recommendation_sort/{recommendation_id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Изменение порядкового номера рекомендации"};
  }
  rpc AddPriceList(AddPriceListRequest) returns (AddPriceListResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/add_price_list"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление прайс-листа"};
  }
  rpc DeletePriceList(DeletePriceListRequest) returns (DeletePriceListResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/delete_price_list"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление прайс-листа"};
  }
  rpc AddNetwork(AddNetworkRequest) returns (AddNetworkResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/add_network"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление соцсети фрилансеру"};
  }
  rpc DeleteNetwork(DeleteNetworkRequest) returns (DeleteNetworkResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancer/{freelancer_id}/delete_network"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Удаление соцсети"};
  }
  rpc GetFreelancerAdditionalSpecialities(GetFreelancerAdditionalSpecialitiesRequest) returns (GetFreelancerAdditionalSpecialitiesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancer/{freelancer_id}/additional_specialities"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Доп специальности конкретного фрилансера"};
  }
  rpc GetFreelancerAdditionalCities(GetFreelancerAdditionalCitiesRequest) returns (GetFreelancerAdditionalCitiesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancer/{freelancer_id}/additional_cities"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Доп города конкретного фрилансера"};
  }
  rpc GetFreelancerCooperationTypes(GetFreelancerCooperationTypesRequest) returns (GetFreelancerCooperationTypesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancer/cooperation_types"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Типы размещения фрилансеров"};
  }
  rpc GetFreelancerPriceList(GetFreelancerPriceListRequest) returns (GetFreelancerPriceListResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancer/{freelancer_id}/price_list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Прайс-лист фрилансера"};
  }
  rpc GetFreelancerRecommendations(GetFreelancerRecommendationsRequest) returns (GetFreelancerRecommendationsResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancer/{freelancer_id}/recommendations"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Рекомендации фрилансера"};
  }
  rpc GetFreelancerSocialNetworks(GetFreelancerSocialNetworksRequest) returns (GetFreelancerSocialNetworksResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancer/{freelancer_id}/social_networks"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Соцсети в которых работает фрилансер"};
  }
}

message CityItem {
  int64 id = 1;
  string name = 2;
}

message SpecialityItem {
  int64 id = 1;
  string name = 2;
}

message CooperationType {
  int64 id = 1;
  string name = 2;
}

message Society {
  int64 id = 1;
  string name = 2;
  string slug = 3;
}

message Recommendation {
  int64 doctor_id = 1;
  string doctor_name = 2;
}

message PriceList {
  int64 id = 1;
  string name = 2;
  string amount = 3;
}

message GetFreelancersRequest {}

message GetFreelancersResponse {
  repeated Freelancer freelancers = 1;
  message Freelancer {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;
  }
}

message SortFreelancersRequest {}

message SortFreelancersResponse {
  repeated Freelancer freelancers = 1;
  message Freelancer {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;
  }
}

message SearchFreelancersRequest {
  string query = 1;
}

message SearchFreelancersResponse {
  repeated Freelancer freelancers = 1;
  message Freelancer {
    int64 id = 1;
    string name = 2;
    string image = 3;
    bool is_active = 4;

    CooperationType cooperation_type = 5;
  }
}

message GetFreelancerByIDRequest {
  int64 freelancer_id = 1;
}

message GetFreelancerByIDResponse {
  int64 id = 1;
  string name = 2;
  string slug = 3;
  string portfolio_link = 4;
  string tg_url = 5;

  CityItem main_city = 6;
  SpecialityItem main_speciality = 7;

  string image = 8;

  CooperationType cooperation_type = 9;

  bool is_active = 10;
  bool agency_representative = 11;

  string created_at = 12;
  string date_started = 13;
  int64 price_category = 14;
  string email = 15;
  //  todo года работы
}

message UpdateFreelancerRequest {
  int64 freelancer_id = 1;

  string name = 2;
  string slug = 3;
  string portfolio_link = 4;
  string tg_url = 5;

  int64 main_city_id = 6;
  int64 main_speciality_id = 7;

  int64 cooperation_type_id = 8;
  bool agency_representative = 9;

  string date_started = 10;
  int64 price_category = 11;
}

message UpdateFreelancerResponse {}

message DeleteFreelancerRequest {
  int64 freelancer_id = 1;
}

message DeleteFreelancerResponse {}

message ActivateFreelancerRequest {
  int64 freelancer_id = 1;
}

message ActivateFreelancerResponse {}

message DeactivateFreelancerRequest {
  int64 freelancer_id = 1;
}

message DeactivateFreelancerResponse {}

message SaveFreelancerPhotoRequest {
  int64 freelancer_id = 1;
  string image_data = 2; // файл в строке base64
}

message SaveFreelancerPhotoResponse {
  string image = 1;
}

message AddAdditionalCityRequest {
  int64 freelancer_id = 1;
  int64 city_id = 2;
}

message AddAdditionalCityResponse {}

message AddFreelancerAdditionalSpecialityRequest {
  int64 freelancer_id = 1;
  int64 speciality_id = 2;
}

message AddFreelancerAdditionalSpecialityResponse {}

message DeleteFreelancerAdditionalCityRequest {
  int64 freelancer_id = 1;
  int64 city_id = 2;
}

message DeleteFreelancerAdditionalCityResponse {}

message DeleteFreelancerAdditionalSpecialityRequest {
  int64 freelancer_id = 1;
  int64 speciality_id = 2;
}

message DeleteFreelancerAdditionalSpecialityResponse {}

message AddRecommendationRequest {
  int64 freelancer_id = 1;
  int64 doctor_id = 2;
}

message AddRecommendationResponse {
  Doctor doctor = 1;

  message Doctor {
    int64 id = 1;
    string name = 2;
    string slug = 3;
    string city_name = 4;
    string speciality_name = 5;
    string image = 6;
  }
}

message DeleteRecommendationRequest {
  int64 freelancer_id = 1;
  int64 doctor_id = 2;
}

message DeleteRecommendationResponse {}

message ChangeRecommendationSortRequest {
  int64 freelancer_id = 1;
  int64 recommendation_id = 2;
  int64 sort = 3;
}

message ChangeRecommendationSortResponse {}

message AddPriceListRequest {
  int64 freelancer_id = 1;
  // Название услуги
  string name = 2;
  // Стоимость услуги
  int64 amount = 3;
}

message AddPriceListResponse {
  int64 price_list_item_id = 1;
}

message DeletePriceListRequest {
  int64 freelancer_id = 1;
  int64 price_list_item_id = 2;
}

message DeletePriceListResponse {}

message AddNetworkRequest {
  int64 freelancer_id = 1;
  int64 society_id = 2;
}

message AddNetworkResponse {}

message DeleteNetworkRequest {
  int64 freelancer_id = 1;
  int64 society_id = 2;
}

message DeleteNetworkResponse {}

message GetFreelancerAdditionalSpecialitiesRequest {
  int64 freelancer_id = 1;
}
message GetFreelancerAdditionalSpecialitiesResponse {
  repeated SpecialityItem additional_specialities = 1;
}
message GetFreelancerAdditionalCitiesRequest {
  int64 freelancer_id = 1;
}
message GetFreelancerAdditionalCitiesResponse {
  repeated CityItem additional_cities = 1;
}
message GetFreelancerCooperationTypesRequest {}
message GetFreelancerCooperationTypesResponse {
  repeated CooperationType cooperation_types = 1;
}
message GetFreelancerPriceListRequest {
  int64 freelancer_id = 1;
}
message GetFreelancerPriceListResponse {
  repeated PriceList price_list = 1;
}
message GetFreelancerRecommendationsRequest {
  int64 freelancer_id = 1;
}
message GetFreelancerRecommendationsResponse {
  repeated Recommendation recommendations = 1;
}

message GetFreelancerSocialNetworksRequest {
  int64 freelancer_id = 1;
}
message GetFreelancerSocialNetworksResponse {
  repeated Society social_networks = 1;
}
